fix: use bundled playwright browser for independent window

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "build": "npm run clean && npm run build:main && npm run build:renderer",
     "start": "cross-env NODE_ENV=production electron dist/main/main/index.js",
     "typecheck": "tsc -p tsconfig.main.json --noEmit && tsc -p tsconfig.renderer.json --noEmit",
-    "pack": "npm run build && electron-builder -c.electronDist=node_modules/electron/dist",
-    "pack:mac": "npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist",
-    "pack:update": "npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist --publish never",
-    "pack:publish": "npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist --publish always",
-    "pack:update:generic": "(test -n \"$PICFACTORY_PUBLISH_URL\" || (echo \"请先设置 PICFACTORY_PUBLISH_URL（更新服务器地址）\" && exit 1)) && npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist --config.publish.provider=generic --config.publish.url=$PICFACTORY_PUBLISH_URL --publish never"
+    "prepare:browsers": "cross-env PLAYWRIGHT_BROWSERS_PATH=.playwright-browsers npx playwright install chromium",
+    "pack": "npm run prepare:browsers && npm run build && electron-builder -c.electronDist=node_modules/electron/dist",
+    "pack:mac": "npm run prepare:browsers && npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist",
+    "pack:update": "npm run prepare:browsers && npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist --publish never",
+    "pack:publish": "npm run prepare:browsers && npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist --publish always",
+    "pack:update:generic": "(test -n \"$PICFACTORY_PUBLISH_URL\" || (echo \"请先设置 PICFACTORY_PUBLISH_URL（更新服务器地址）\" && exit 1)) && npm run prepare:browsers && npm run build && electron-builder --mac dmg zip -c.electronDist=node_modules/electron/dist --config.publish.provider=generic --config.publish.url=$PICFACTORY_PUBLISH_URL --publish never"
   },
   "dependencies": {
     "electron-updater": "^6.7.3",
@@ -54,6 +55,15 @@
     "files": [
       "dist/**",
       "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": ".playwright-browsers",
+        "to": "ms-playwright",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "mac": {
       "target": [
